@@ -4323,8 +4323,9 @@ F:FOUNTAIN
 N:586:Invisibility
 G:=:d
 I:45:53:4
-W:50:0:2:10000
-A:50/1
+#W:50:0:2:10000
+W:50:0:2:200000
+A:50/80
 F:INVIS | HIDE_TYPE
 
 #N:587:Time
